first commit of short term prediction web service.
